--- a/Streamlit/requirements.txt
+++ b/Streamlit/requirements.txt
@@ -116,13 +116,13 @@ hyperopt==0.2.7
 idna==3.4
 ImageHash==4.3.1
 imbalanced-learn==0.10.0
-importlib-metadata==4.13.0
+importlib-metadata @ file:///tmp/build/80754af9/importlib-metadata_1648562407465/work
 importlib-resources==5.10.0
 install==1.3.5
 ipykernel==6.16.2
 ipython==7.34.0
 ipython-genutils==0.2.0
-ipywidgets==7.7.2
+ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1634143127070/work
 isodate==0.6.1
 itsdangerous==2.1.2
 jedi==0.18.1
@@ -139,7 +139,7 @@ jupyter_client==7.4.4
 jupyter_core==4.11.2
 jupyterlab @ file:///opt/conda/conda-bld/jupyterlab_1647445413472/work
 jupyterlab-pygments==0.2.2
-jupyterlab-widgets==1.1.1
+jupyterlab-widgets @ file:///tmp/build/80754af9/jupyterlab_widgets_1609884341231/work
 jupyterlab_server @ file:///opt/conda/conda-bld/jupyterlab_server_1664908231281/work
 keras==2.11.0
 keras-self-attention==0.51.0
@@ -323,7 +323,7 @@ webencodings==0.5.1
 websocket-client==1.4.2
 websockets==10.4
 Werkzeug==2.2.2
-widgetsnbextension==3.6.1
+widgetsnbextension @ file:///tmp/build/80754af9/widgetsnbextension_1645009354203/work
 wordcloud==1.8.2.2
 wrapt==1.14.1
 wsproto==1.2.0
