--- a/Streamlit/requirements.txt
+++ b/Streamlit/requirements.txt
@@ -199,6 +199,7 @@ pexpect==4.8.0
 phik==0.12.2
 pickleshare==0.7.5
 Pillow==9.3.0
+pip==23.1.2
 pkgutil_resolve_name==1.3.10
 plotly==5.11.0
 ply==3.11
